charts/dev/docker-grafana-speedtest/templates/speedtest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert --chart
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: speedtest
  name: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: speedtest
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert --chart
        kompose.version: 1.23.0 (bc7d9f4f)
      creationTimestamp: null
      labels:
        io.kompose.network/speedtest-postgres-net: "true"
        io.kompose.service: speedtest
    spec:
      containers:
        - image: renegademaster/docker-grafana-speedtest-speedtest:0.1.0-0
          name: speedtest
          resources: {}
      restartPolicy: Always
status: {}
